# rumble-canvas

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.fr.md  README.md  ROADMAP.md  deny.toml
.github/workflows/: ci.yml  hygiene.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: wrench.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  role_assignment.rs  workspace_membership.rs
crates/domain/tests/: integration_test_workspace_identity.rs
crates/handoff/: Cargo.toml
crates/handoff/src/: lib.rs  token_sealer.rs  wrench_integration.rs
crates/handoff/tests/: fixture_adoption_path.rs  wrench_integration_test.rs
crates/package/: Cargo.toml
crates/package/src/: lib.rs  schema.rs
crates/package/tests/: schema_validation_test.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
docs/: ADOPTION_PATH_D11.md  OPERATIONS.md  WRENCH_INTEGRATION.md  product-readiness.md
specs/: spec-package.v0.1.schema.json
specs/shared/contracts/: workspace-identity.v0.1.schema.json
