[package]
name = "rumble-canvas-handoff"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rumble-canvas-domain = { path = "../domain" }
rumble-canvas-package = { path = "../package" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile = "3"
thiserror.workspace = true
