[package]
name = "rumble-canvas-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rumble-canvas-domain = { path = "../domain" }
rumble-canvas-handoff = { path = "../handoff" }
rumble-canvas-package = { path = "../package" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
